<resources>
    <string name="ice_candidates_file_name" translatable="false">ice_servers.json</string>
    <string name="signaling_server_url" translatable="false">http://192.168.0.105:3030/</string>
    <string name="default_signaling_server_url" translatable="false">http://localhost:3030/</string>
    <string name="default_signaling_server_room" translatable="false">room/</string>
    <string name="poly_server_url" translatable="false">https://poly.googleapis.com/</string>
    <string name="poly_server_api_key" translatable="false">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="app_releases_url" translatable="false">https://github.com/judicapo/MUITSS-AREVI/releases/latest</string>

    <string name="app_name">AREVI</string>
    <string name="app_preferences_name">AREVI_Preferences</string>
    <string name="app_title">AREVI app</string>
    <string name="start_ar_scene_button_text">Start ar scene</string>
    <string name="wizard_activity_button_text">Manage profile</string>
    <string name="frame_app_config_description_text">Set the way AREVI will show relevant information.</string>
    <string name="frame_ar_config_description_text">AREVI is compatible with Google Cardboard, you are able to use it to explore the augmented reality experience.</string>
    <string name="frame_app_font_size_text">Set text size:</string>
    <string name="section_format">Page %1$d</string>
    <string name="pager_skip_button_text">Skip</string>
    <string name="pager_finish_button_text">Finish</string>
    <string name="indicator_of_context_action_image_text">Indicator of context action</string>
    <string name="frame_profile_config_description_text">AREVI wants to know you in order to provide the study with demographic information.</string>
    <string name="frame_app_config_title_text">AREVI configuration</string>
    <string name="frame_profile_config_title_text">Your AREVI profile</string>
    <string name="frame_app_config_theme_rbtn_text">Set color theme:</string>
    <string name="frame_app_config_light_theme_rbtn_text">Light</string>
    <string name="frame_app_config_dark_theme_rbtn_text">Dark</string>
    <string name="frame_app_font_default_size_text">Normal</string>
    <string name="frame_app_font_medium_size_text">Medium</string>
    <string name="frame_app_font_large_size_text">Large</string>
    <string name="frame_ar_config_title_text">AREVI augmented reality user interface.</string>
    <string name="frame_profile_config_user_gender_text">Gender:</string>
    <string name="text_input_txt_email_text">Email:</string>
    <string name="text_input_txt_password_text">Password:</string>
    <string name="text_input_txt_full_name_text">Full name:</string>
    <string name="text_input_txt_age_text">Age:</string>
    <string name="text_input_txt_education_text">Education:</string>
    <string name="text_input_txt_occupation_text">Occupation:</string>
    <string name="text_input_txt_visual_illness_text">Describe your visual illness:</string>
    <string name="text_input_txt_gender_text">Specify gender:</string>
    <string name="activity_log_in_title_text">AREVI Log in</string>
    <string name="activity_log_in_description_text">Please start session to configure AREVI.</string>
    <string name="log_in_button_text">Log in</string>
    <string name="register_button_text">Register</string>
    <string name="far_activity_log_in_description_text">Start session to configure AREVI with your profile</string>
    <string name="frame_profile_config_login_text">Already registered?</string>
    <string name="activity_main_update_app_text">There is a new version of AREVI</string>
    <string name="activity_main_update_app_button_text">Download now</string>
    <string name="form_validation_error_empty">Required field!</string>
    <string name="form_validation_error_email">Not a valid email!</string>
    <string name="webrtc_remote_stream_received">Received Remote stream</string>
    <string name="toast_register_AREVI">Please register in AREVI</string>
    <string name="toast_error_loading_release">Error loading release!</string>
    <string name="toast_no_task_AREVI">No tasks available in AREVI</string>
    <string name="toast_room_creation">Created the room </string>
    <string name="toast_room_join">Joined the room </string>
    <string name="toast_remote_join">Remote peer joined</string>
    <string name="toast_remote_disconnected">Remote peer disconnected</string>
    <string name="toast_remote_offer_received">Received offer</string>
    <string name="toast_remote_answer_received">Received answer</string>
    <string name="dialog_loading_text">Loading…</string>
    <string-array name="input_spinner_gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Other (specify)</item>
    </string-array>
    <string-array name="input_spinner_age_list">
        <item>17 or younger</item>
        <item>18–20</item>
        <item>21–29</item>
        <item>30–39</item>
        <item>40–49</item>
        <item>50–59</item>
        <item>60 or older</item>
    </string-array>
    <string-array name="input_spinner_education_list">
        <item>Less than high school degree</item>
        <item>High school degree or equivalent</item>
        <item>Some college but no degree</item>
        <item>Associate degree</item>
        <item>Bachelor degree</item>
        <item>Graduate degree</item>
    </string-array>
    <string name="frame_profile_config_privacy_compliance_text">By continuing you are agreeing to share your information for research purposes.</string>
    <string name="use_cardboard_switch_text">Use Google Cardboard?</string>
    <string name="assessment_answer_1_text">1</string>
    <string name="assessment_answer_2_text">2</string>
    <string name="assessment_answer_3_text">3</string>
    <string name="assessment_answer_4_text">4</string>
    <string name="assessment_answer_5_text">5</string>
    <string name="system_usability_scale_1_text">1. Strongly Disagree</string>
    <string name="system_usability_scale_5_text">5. Strongly Agree</string>
    <string name="system_usability_scale_tittle_text">System Usability Scale</string>
    <string name="system_usability_scale_instructions_text">Instructions: For each of the following statements, mark one box that best describes your reactions to AREVI today.</string>
    <string name="system_usability_scale_question_1_text">1. I think that I would like to use this application frequently.</string>
    <string name="system_usability_scale_question_2_text">2. I found this application unnecessarily complex.</string>
    <string name="system_usability_scale_question_3_text">3. I thought this application was easy to use.</string>
    <string name="system_usability_scale_question_4_text">4. I think that I would need assistance to be able to use this application.</string>
    <string name="system_usability_scale_question_5_text">5. I found the various functions in this application were well integrated.</string>
    <string name="system_usability_scale_question_6_text">6. I thought there was too much inconsistency in this application.</string>
    <string name="system_usability_scale_question_7_text">7. I would imagine that most people would learn to use this application very quickly.</string>
    <string name="system_usability_scale_question_8_text">8. I found this application very cumbersome/awkward to use.</string>
    <string name="system_usability_scale_question_9_text">9. I felt very confident using this application.</string>
    <string name="system_usability_scale_question_10_text">10. I needed to learn a lot of things before I could get going with this application.</string>
    <string name="system_usability_scale_free_question_text">Please provide any comments about this application:</string>
    <string name="task_load_index_performance_1_text">1. Perfect</string>
    <string name="task_load_index_performance_5_text">5. Failure</string>
    <string name="task_load_index_1_text">1. Very Low</string>
    <string name="task_load_index_5_text">5. Very High</string>
    <string name="task_load_index_tittle_text">NASA Task Load Index</string>
    <string name="task_load_index_instructions_text">Instructions: For each of the following dimensions, mark one box that best describes your effort in relation to each statement using AREVI today.</string>
    <string name="task_load_index_question_1_tittle">Mental Demand</string>
    <string name="task_load_index_question_1_text">How mentally demanding was the task?</string>
    <string name="task_load_index_question_2_tittle">Physical Demand</string>
    <string name="task_load_index_question_2_text">How physically demanding was the task?</string>
    <string name="task_load_index_question_3_tittle">Temporal Demand</string>
    <string name="task_load_index_question_3_text">How hurried or rushed was the pace of the task?</string>
    <string name="task_load_index_question_4_tittle">Frustration</string>
    <string name="task_load_index_question_4_text">How insecure, discouraged, irritated, stressed,and annoyed were you?</string>
    <string name="task_load_index_question_5_tittle">Performance</string>
    <string name="task_load_index_question_5_text">How successful were you in accomplishing what you were asked to do?</string>
    <string name="task_load_index_question_6_tittle">Effort</string>
    <string name="task_load_index_question_6_text">How hard did you have to work to accomplish your level of performance?</string>
    <string name="ar_instructions_description_text">You are about to experience an augmented reality space, take a look around and localize objects surrounding. You can interact with those by following the instructions below.</string>
    <string name="ar_instructions_description_tittle">AR Scene instructions</string>
    <string name="ar_instructions_start_button_text">Let\'s start</string>
    <string name="fragment_ar_pointer_text">Use the pointer, fixed in the middle of the screen, to signal in direction to objects.</string>
    <string name="fragment_ar_progress_bar_text">The progress bar is shown when an object is being loaded to the augmented reality space.</string>
    <string name="fragment_ar_focus_push_text">Push the focus button to increase the scale of an object when is being pointed to it.</string>
    <string name="fragment_ar_focus_hold_text">Hold the focus button to vanish the signaled object and start loading the next one.</string>
    <string name="fragment_ar_trigger_push_text">Activate the Google cardboard trigger to increase the scale of an object when is being pointed to it.</string>
    <string name="fragment_ar_trigger_hold_text">Pull and hold the Google cardboard trigger to vanish the signaled object and start loading the next one.</string>
    <string name="fragment_ar_cast_push_text">Push the cast button to share your experience via WebRTC.</string>
    <string name="fragment_ar_discovering_text">Look around in direction to plane surfaces in order to map your environment.</string>
    <string name="ar_instructions_rotate_view_text">Hit let\'s start button and rotate your phone and put it into the Google Cardboard.</string>
    <string name="ar_instructions_end_task_text">The task will end when all objects are vanished. Please fill the questionnaire after finishing the job.</string>
    <string name="ar_instructions_task_description_text">The coming up task is designed to assess whether scalable objects in augmented reality environments are useful for improving your ability to see them clearly, so do not rush and take the time to increase the scale of objects until you can read their description and distinguish them.</string>
    <string name="activity_instructions_ar_skip_btn">Skip</string>
</resources>
