<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:ellipsize="end"
            android:hyphenationFrequency="normal"
            android:breakStrategy="simple"
            android:scrollHorizontally="false"
            android:textSize="?attr/titleTextSize" />

        <Button
            android:id="@+id/activity_main_manage_profile.btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard_activity_button_text"
            android:onClick="onLogInButtonClick"
            android:ellipsize="end"
            android:hyphenationFrequency="normal"
            android:breakStrategy="simple"
            android:scrollHorizontally="false" />

        <Button
            android:id="@+id/activity_main_ar_scene.btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ar_scene_button_text"
            android:onClick="onStartArButtonClick"
            android:ellipsize="end"
            android:hyphenationFrequency="normal"
            android:breakStrategy="simple"
            android:scrollHorizontally="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_app_layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/activity_main_update_app_text"
            android:ellipsize="end"
            android:hyphenationFrequency="normal"
            android:breakStrategy="simple"
            android:scrollHorizontally="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_update_app_button_text"
            android:onClick="onUpdateAppButtonClick"
            android:ellipsize="end"
            android:hyphenationFrequency="normal"
            android:breakStrategy="simple"
            android:scrollHorizontally="false" />
    </LinearLayout>

</FrameLayout >