<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_section_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:src="@drawable/ic_verified_user_black_24dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/indicator_of_context_action_image_text" />
        </FrameLayout>

        <TextView
            android:id="@+id/section_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_log_in_title_text"
            android:ellipsize="end"
            android:gravity="top|center"
            android:hyphenationFrequency="normal"
            android:breakStrategy="simple"
            android:scrollHorizontally="false"
            android:textSize="?attr/titleTextSize"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/activity_margin_border"
            android:layout_marginRight="@dimen/activity_margin_border"
            android:layout_gravity="bottom"
            android:background="?attr/fillPrimaryColor"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/frame_profile_config_description_text"
                android:ellipsize="end"
                android:hyphenationFrequency="normal"
                android:breakStrategy="simple"
                android:scrollHorizontally="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/activity_log_in_form">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_input_txt_email_text"
                android:ellipsize="end"
                android:hyphenationFrequency="normal"
                android:breakStrategy="simple"
                android:scrollHorizontally="false"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/text_input_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_input_txt_password_text"
                android:ellipsize="end"
                android:hyphenationFrequency="normal"
                android:breakStrategy="simple"
                android:scrollHorizontally="false"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/text_input_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_button_text"
                android:onClick="onLogInButtonClick"
                android:ellipsize="end"
                android:hyphenationFrequency="normal"
                android:breakStrategy="simple"
                android:scrollHorizontally="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:onClick="onRegisterButtonClick"
                android:ellipsize="end"
                android:hyphenationFrequency="normal"
                android:breakStrategy="simple"
                android:scrollHorizontally="false" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

